сборка svg-спрайта и ДЕМО-ФАЙЛЫ для спрайта

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>Document</title>
 </head>
 <body>
-  111111111
+  @@include('img/sprite-svg.svg')
+
+  <svg width="24" height="24"><use xlink:href="#loupe"></use></svg>
+
+  text
 </body>
 </html>
