--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!--DEV  Вставка JS, который будет качать шрифт при первом посещении домена -->
+  <script>@@include('fonts/font_loading.js')</script>
+  <!--DEV  Резервное подключение CSS -файла с WOFF шрифтом на случай отключенного JS -->
+  <noscript><link rel="stylesheet" href="css/font_opensans_woff.css"></noscript>
+
   @@include('_include/page-head.html')
   <title>Document</title>
 </head>
