Добавил сшивку PNG-спрайтов

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
   <svg width="24" height="24"><use xlink:href="#rgb"></use></svg>
   <svg width="24" height="24"><use xlink:href="#tea-cup"></use></svg>
 
+
+  <div class="chrome"></div>
+  <div class="github-logo"></div>
+  <div class="kraken"></div>
+  <div class="male-and-female"></div>
+  <div class="musica-searcher"></div>
+  <div class="placeholder"></div>
+
   <p>text</p>
 </body>
 </html>
